# leapfrogai

./: .dockerignore  .env.local  .gitignore  .hadolint.yaml  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.migrations  Makefile  README.md  build.md  config.example.yaml  conftest.py  docker-compose.yaml  go.mod  go.sum  leapfrog-values.yaml  leapfrogai.proto  make-supabase.mk  make-tests.mk  markdownlint.json  mk-clean.mk  netlify.toml  package-lock.json  package.json  pyproject.toml  renovate.config  renovate.json  renovate.json5  requirements.txt  tasks.schema.json  tasks.yaml  uds-v0.14.0.schema.json  values.yaml  weaviate-values.yaml  zarf-config.yaml  (+1 more)
llms/pegasus-xsum/: .python-version  Dockerfile  Dockerfile-Rye  README.md  get_models.py  model_test.py  pegasus_xsum.py  pyproject.toml  server.py
models/speech2text/whisper/: .python-version  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.py  yuri.m4a  zarf-config.yaml  zarf.yaml
models/speech2text/whisper/tests/: parallelization.py  test.py
src/leapfrogai_api/: .env.example  .gitignore  Makefile  README.md  config.example.yaml  leapfrogai_pb2.py  main.py  pyproject.toml
src/leapfrogai_api/backend/: __init__.py  composer.py  constants.py  converters.py  document_loader.py  file_parser.py  grpc_client.py  helpers.py  leapfrogai_embeddings.py  thread_runner.py  types.py  validators.py
src/leapfrogai_api/backend/rag/: AsyncSupabaseVectorStore.py  document_loader.py  index.py  indexing.py  leapfrogai_embeddings.py  query.py  reranker.py  supabase_vector_store.py
src/leapfrogai_api/backend/security/: api_key.py
src/leapfrogai_api/backends/: grpc_client.py  helpers.py
src/leapfrogai_api/backends/openai/: __init__.py  grpc_client.py  helpers.py  routes.py  types.py
src/leapfrogai_api/data/: async_mixin.py  crud_api_key.py  crud_assistant.py  crud_assistant_object.py  crud_base.py  crud_file_bucket.py  crud_file_object.py  crud_message.py  crud_message_object.py  crud_run.py  crud_run_step.py  crud_thread.py  crud_thread_object.py  crud_vector_content.py  crud_vector_store.py  crud_vector_store_file.py  crud_vector_store_object.py  supabase_client.py  supabase_vector_store.py
src/leapfrogai_api/routers/: assistants.py  assistants_types.py  base.py  files.py  supabase_session.py  supabase_session_api_key.py  threads.py  token_count.py  types.py  vector_store.py
src/leapfrogai_api/routers/leapfrogai/: auth.py  count.py  models.py  rag.py  token_count.py  tokens.py  vector_stores.py
src/leapfrogai_api/routers/openai/: assistants.py  audio.py  chat.py  completions.py  embeddings.py  files.py  grpc_client.py  helpers.py  messages.py  models.py  runs.py  runs_steps.py  threads.py  types.py  vector_store.py  vector_stores.py
src/leapfrogai_api/supabase/: config.toml  migrations
src/leapfrogai_api/typedef/: __init__.py  assistant_types.py  common.py
src/leapfrogai_api/typedef/assistants/: __init__.py  assistant_types.py
src/leapfrogai_api/typedef/audio/: __init__.py  audio_types.py
src/leapfrogai_api/typedef/auth/: __init__.py  auth_types.py
src/leapfrogai_api/typedef/chat/: __init__.py  chat_types.py
src/leapfrogai_api/typedef/completion/: __init__.py  completion_types.py
src/leapfrogai_api/typedef/counting/: __init__.py  token_count_types.py
src/leapfrogai_api/typedef/embeddings/: __init__.py  embedding_types.py
src/leapfrogai_api/typedef/files/: __init__.py  file_types.py
src/leapfrogai_api/typedef/messages/: __init__.py  message_types.py
src/leapfrogai_api/typedef/models/: __init__.py  model_types.py
src/leapfrogai_api/typedef/rag/: __init__.py  rag_types.py
src/leapfrogai_api/typedef/request/: __init__.py  auth_types.py  run_create_params.py  run_create_params_base.py
src/leapfrogai_api/typedef/requests/: __init__.py  run_create.py  run_create_params.py  run_modify.py
src/leapfrogai_api/typedef/runs/: __init__.py  run_create.py  run_create_base.py
src/leapfrogai_api/typedef/threads/: __init__.py  thread_create.py  thread_modify.py  thread_run_create_params_request.py
src/leapfrogai_api/typedef/vectorstores/: __init__.py  search_types.py  vectorstore_types.py
src/leapfrogai_api/types/: __init__.py  cli.py  config.py  constants.py  errors.py  model_types.py  serve.py  utils.py
src/leapfrogai_api/types/audio/: audio_pb2.py  audio_pb2.pyi  audio_pb2_grpc.py
src/leapfrogai_api/types/chat/: chat_pb2.py  chat_pb2_grpc.py
src/leapfrogai_api/types/completion/: completion_pb2.py  completion_pb2.pyi  completion_pb2_grpc.py
src/leapfrogai_api/types/embeddings/: embeddings_pb2.py  embeddings_pb2.pyi  embeddings_pb2_grpc.py
src/leapfrogai_api/types/name/: name_pb2.py  name_pb2_grpc.py
src/leapfrogai_api/types/request/: __init__.py  auth_types.py  (+2 more)
src/leapfrogai_api/utils/: __init__.py  config.py  decorators.py  logging_tools.py  openai_util.py  validate_tools.py
src/leapfrogai_evals/: .env-example  .env.example  README.md  main.py  pyproject.toml
src/leapfrogai_evals/evals/: __init__.py  human_eval.py  mmlu.py  niah_eval.py  qa_eval.py
src/leapfrogai_evals/judges/: claude_sonnet.py
src/leapfrogai_evals/metrics/: __init__.py  annotation_relevancy.py  correctness.py  niah_metrics.py
src/leapfrogai_evals/models/: __init__.py  lfai.py
src/leapfrogai_evals/runners/: __init__.py  niah_runner.py  qa_runner.py
src/leapfrogai_evals/utils/: defaults.py
src/leapfrogai_sdk/: Dockerfile  README.md  __init__.py  cli.py  config.py  llm.py  pyproject.toml  serve.py  utils.py
src/leapfrogai_sdk/audio/: audio_pb2.py  audio_pb2.pyi  audio_pb2_grpc.py
src/leapfrogai_sdk/chat/: chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py
src/leapfrogai_sdk/completion/: completion_pb2.py  completion_pb2.pyi  completion_pb2_grpc.py
src/leapfrogai_sdk/counting/: counting_pb2.py  counting_pb2.pyi  counting_pb2_grpc.py
src/leapfrogai_sdk/embeddings/: embeddings_pb2.py  embeddings_pb2.pyi  embeddings_pb2_grpc.py
src/leapfrogai_sdk/name/: name_pb2.py  name_pb2.pyi  name_pb2_grpc.py
(+951 files in other folders)
