[project]
name = "leapfrogai"
description = "ChatGPT type capabilities for secure, local, air-gapped systems."
authors = [{ name = "LeapfrogAI Team", email = "ai@defenseunicorns.com" }]

# x-release-please-start-version
version = "0.10.0"
# x-release-please-end

readme = "README.md"
license = {file = "LICENSE"}

dependencies = [  # Dev dependencies needed for all of lfai
    "openai",
    "pip-tools == 7.3.0",
    "httpx",
    "ruff",
    "python-dotenv"
]
requires-python = "~=3.11"

[project.optional-dependencies]
dev = [
    "locust",
    "pytest-asyncio",
    "requests",
    "requests-toolbelt",
    "pytest",
    "huggingface_hub[cli,hf_transfer]",
]

dev-whisper = [
    "ctranslate2",
    "transformers[torch]"
]

dev-vllm = [
    "confz"
]

[tool.pip-tools]
generate-hashes = true

[tool.ruff]
target-version = "py311"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
