[project]
name = "leapfrogai"
description = "OpenAI-like capabilities for secure, local, air-gapped systems."
authors = [{ name = "LeapfrogAI Team", email = "ai@defenseunicorns.com" }]

# x-release-please-start-version
version = "0.14.0"
# x-release-please-end

readme = "README.md"
license = { file = "LICENSE" }

dependencies = [ # Dev dependencies needed for all of LeapfrogAI
    "openai == 1.32.1",
    "pip-tools == 7.3.0",
    "httpx == 0.27.2",
    "ruff == 0.4.3",
    "python-dotenv == 1.0.1",
]
requires-python = "~=3.11"

[project.optional-dependencies]
dev = [
    "locust",
    "pytest-asyncio",
    "requests",
    "requests-toolbelt",
    "pytest",
    "supabase == 2.6.0",
    "huggingface_hub[cli,hf_transfer] ==0.25.1",
    "fastapi == 0.109.1",
]

dev-whisper = ["ctranslate2 ==4.4.0", "transformers[torch] == 4.39.3"]

dev-vllm = ["confz == 2.0.1", "huggingface_hub ==0.25.1"]

[tool.pip-tools]
generate-hashes = true

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
