[project]
name = "pegasus-xsum"
version = "0.1.0"
description = "Text summarization model."
authors = [
    { name = "Gregory Horvath", email = "gphorvath@defenseunicorns.com" }
]
dependencies = [
    "datasets~=2.12.0",
    "transformers~=4.29.2",
    "torch~=2.0.1",
    "simple_ai_server>=0.2",
    "bitsandbytes", 
    "loralib",
    "peft",
    "sentencepiece",
    "cuda-python"
    ]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
