[project]
name = "pegasus-xsum"
version = "0.1.0"
description = "Text summarization model."
authors = [
    { name = "Gregory Horvath", email = "gphorvath@defenseunicorns.com" }
]
dependencies = [
    "bitsandbytes",
    "datasets",
    "loralib",
    "sentencepiece",
    "transformers",
    "peft",
    "simple_ai_server>=0.2",
    "cuda-python"
    ]

readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
