[project]
name = "leapfrogai-api"
description = "An API for LeapfrogAI that allows LeapfrogAI backends to connect seamlessly"

# x-release-please-start-version
version = "0.6.1"
# x-release-please-end

dependencies = [
    "fastapi >= 0.109.1",
    "openai == 1.21.1",
    "uvicorn >= 0.23.2",
    "pydantic >= 2.0.0",
    "python-multipart >= 0.0.7", #indirect dep of FastAPI to receive form data for file uploads
    "watchfiles >= 0.21.0",
    "leapfrogai_sdk",
    "supabase-py-async",
    "langchain",
    "langchain-community",
    "unstructured[all-docs]",
    "pymupdf",
]
requires-python = "~=3.11"

[tool.pip-tools]
generate-hashes = true

[tool.setuptools.packages.find]
where = ["../"]
include = ["leapfrogai_api*"]
namespaces = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
