[project]
name = "leapfrogai-api"
description = "An API for LeapfrogAI that allows LeapfrogAI backends to connect seamlessly"

# x-release-please-start-version
version = "0.7.2"
# x-release-please-end

dependencies = [
    "fastapi >= 0.109.1",
    "openai == 1.32.1",
    "uvicorn >= 0.23.2",
    "pydantic >= 2.0.0",
    "docx2txt >= 0.8",
    "python-multipart >= 0.0.7", #indirect dep of FastAPI to receive form data for file uploads
    "watchfiles >= 0.21.0",
    "leapfrogai_sdk",
    "supabase-py-async >= 2.5.6",
    "langchain >= 0.2.1",
    "langchain-community >= 0.2.1",
    "unstructured[md] >= 0.14.2", # Only specify necessary filetypes to prevent package bloat (e.g. 130MB vs 6GB)
    "pylibmagic >= 0.5.0", # Resolves issue with libmagic not being bundled with OS - https://github.com/ahupp/python-magic/issues/233, may not be needed after this is merged https://github.com/ahupp/python-magic/pull/294
    "python-magic >= 0.4.27"
]
requires-python = "~=3.11"

[tool.pip-tools]
generate-hashes = true

[tool.setuptools.packages.find]
where = ["../"]
include = ["leapfrogai_api*"]
namespaces = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
