[project]
name = "leapfrogai-api"
description = "An API for LeapfrogAI that allows LeapfrogAI backends to connect seamlessly"

# x-release-please-start-version
version = "0.12.2"
# x-release-please-end

dependencies = [
    "fastapi == 0.109.1",
    "pydantic == 2.8.2",
    "openai == 1.32.1",
    "uvicorn == 0.23.2",
    "docx2txt == 0.8",
    "python-multipart == 0.0.7",            #indirect dep of FastAPI to receive form data for file uploads
    "watchdog == 5.0.2",
    "leapfrogai_sdk",
    "supabase == 2.6.0",
    "langchain == 0.2.12",
    "langchain-community == 0.2.11",
    "unstructured[md,xlsx,pptx] == 0.15.9", # Only specify necessary filetypes to prevent package bloat (e.g. 130MB vs 6GB)
    "nltk == 3.9.1",                        # Required for pickled code containing .pptx parsing dependencies
    "pylibmagic == 0.5.0",                  # Resolves issue with libmagic not being bundled with OS - https://github.com/ahupp/python-magic/issues/233, may not be needed after this is merged https://github.com/ahupp/python-magic/pull/294
    "python-magic == 0.4.27",
    "storage3==0.7.6",                      # required by supabase, bug when using previous versions
    "postgrest==0.16.8",                    # required by supabase, bug when using previous versions
    "openpyxl == 3.1.5",
    "psutil == 6.0.0",
    "rerankers[flashrank,rankllm] == 0.5.3"
]
requires-python = "~=3.11"

[project.optional-dependencies]
dev = [
    "pytest-asyncio",
    "requests",
    "requests-toolbelt",
    "pytest"
]

[tool.pip-tools]
generate-hashes = true

[tool.setuptools.packages.find]
where = ["../"]
include = ["leapfrogai_api*"]
namespaces = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff]
target-version = "py311"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
